<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_loginout_shape"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="18dp"
        android:gravity="center"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:text="@string/tv_sure_want_to_exit"
        android:textSize="15dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/color_ccc" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_cancle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selectdialogleftdialog_selector"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/common_blue2" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/color_ccc" />

        <TextView
            android:id="@+id/tv_ok"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selectdialogrightdialog_selector"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="@color/common_blue2" />
    </LinearLayout>

</LinearLayout>