<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg"
    android:orientation="vertical">

    <!--我的-所送表情-->
    <!--标题-->
    <com.haiqiu.miaohi.view.CommonNavigation
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleText="@string/title_send_expression" />

    <com.haiqiu.miaohi.widget.pulltorefreshview.PullToRefreshRecyclerView
        android:id="@+id/pulltorefresh_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    <RelativeLayout
        android:id="@+id/iv_net_error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/net_error" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/tv_no_net"
                android:textColor="@color/text_color_gray"
                android:textSize="16dp" />
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/tv_no_data"
            android:textColor="@color/text_color_gray"
            android:textSize="16dp" />
    </RelativeLayout>

</LinearLayout>