<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/shape_4_white_corner_rectangle"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/tv_select_payment_method"
                android:textColor="@color/color_333"
                android:textSize="16dp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/iv_close"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:src="@drawable/svg_login_close" />
        </RelativeLayout>

        <View style="@style/common_mini_line_df" />

        <LinearLayout
            android:id="@+id/ll_pay_weixin"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/common_enter_selector"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:src="@drawable/svg_icon_weixin" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:layout_weight="1"
                android:text="@string/tv_wx_pay"
                android:textColor="@color/color_666"
                android:textSize="14dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:src="@drawable/enterarrow" />

        </LinearLayout>

        <View
            style="@style/common_mini_line_df"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp" />

        <LinearLayout
            android:id="@+id/ll_pay_zhifubao"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/common_enter_corner_selector"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:src="@drawable/svg_icon_zhifubao" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:layout_weight="1"
                android:text="@string/tv_alipay"
                android:textColor="@color/color_666"
                android:textSize="14dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:src="@drawable/enterarrow" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>